--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       timeout: 60s
       retries: 5
     environment:
-      - DATABASE_URL=postgresql://postgres:postgrespassword@postgres:5432/taskdb
+      - DATABASE_URL=postgresql://postgres:postgrespassword@postgres:5432/tasksdb
     depends_on:
       - postgres
     ports:
@@ -40,7 +40,7 @@ services:
   nginx:
     image: nginx:alpine
     ports:
-      - "80:80"
+      - "8080:80"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
